cLEANUP ENTITY TO MODEL CONVERSION AND SOME WORK ON CONTROLLERS

--- a/draft-server-express-prisma/.env_sample
+++ b/draft-server-express-prisma/.env_sample
@@ -5,4 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 # MySQL format
 
-DATABASE_URL="db://user:pswd@host:port/db"
+DATABASE_URL="mysql://USER:PASSWORD@HOST:PORT/DATABASE
