--- a/draft-server-express-prisma/.gitignore
+++ b/draft-server-express-prisma/.gitignore
@@ -1,5 +1,5 @@
 node_modules
-# Keep environment variables out of version control
+# Keep environment variables out of version control and node_modules too
 .env
 /dist
 
