--- a/draft-server-express-prisma/package.json
+++ b/draft-server-express-prisma/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/src/index.js",
+    "start": "ts-node ./src/index.ts",
     "dev": "tsc-watch onSuccess \"node ./dist/src/index.js\"",
     "seed": "ts-node prisma/seed.ts",
     "build": "tsc"
@@ -14,15 +14,15 @@
   "author": "Darryl Thompson",
   "license": "ISC",
   "devDependencies": {
+    "@prisma/client": "^5.10.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.17",
-    "prisma": "^5.9.1",
+    "prisma": "^5.10.2",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@prisma/client": "^5.9.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
