--- a/draft-server/tsconfig.json
+++ b/draft-server/tsconfig.json
@@ -6,7 +6,7 @@
       "esModuleInterop": true,
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
-      "outDir": "./dist/server.ts"
+      "outDir": "./dist"
     },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules"]
