--- a/draftapp-client/package.json
+++ b/draftapp-client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "element-plus": "^2.6.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-i18n": "^9.2.2",
@@ -20,10 +21,10 @@
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
