--- a/draft-client/package.json
+++ b/draft-client/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "dev": "nodemon"
   },
   "dependencies": {
     "axios": "^1.7.2",
