--- a/draft-client/package.json
+++ b/draft-client/package.json
@@ -6,10 +6,13 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "lint:fix": "eslint --ext .js,.vue src --fix",
+    "format": "prettier --write \"src/**/*.{js,vue}\"",
     "dev": "nodemon"
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "lint": "^0.8.19",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "^3.52.0",
@@ -22,7 +25,12 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "eslint": "^9.6.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.27.0",
     "nodemon": "^3.1.3",
+    "prettier": "^3.3.2",
     "typescript": "~4.5.5"
   }
 }
